# maxima-ViT

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: check-notebooks.yml  ci.yml
configs/: data_config.yaml  full_hires_train_cfg.yaml  full_lores_train_cfg.yaml  head_hires_train_cfg.yaml  head_lores_train_cfg.yaml  ktrain_config.yaml  mini_train.yaml  sim_config.yaml  train_head_lores_config.yaml  train_multi_head.yaml  train_single_head.yaml  train_swin.yaml  training_config.yaml  tune_swin.yaml  tuning_config.yaml
configs/deprecated/: full_hires_train_cfg.yaml  head_hires_train_cfg.yaml  mini_train.yaml
maxima_vit/: __init__.py  data_pipeline.py  loss.py  model.py
notebooks/: L-M.ipynb  calib_workflow.ipynb  dark_flat_sim.ipynb  decoupled_simulation_demo.ipynb  evaluate.ipynb  grad_cam_map.ipynb  model_statistics.ipynb  patterns.ipynb  prepare_dataset.ipynb  preview_fit.ipynb  profile_analysis.ipynb  training_data_synthesis.ipynb
scripts/: calibrate.py  cross_validate.py  evaluate.py  inspect_checkpoint.py  interpolate_weights.py  simulate_data.py  train.py
src/: data_pipeline.py  detectors.py  loss.py  model.py  utils.py
src/configs/: data_config.yaml  training_config.yaml
src/maxima_vit/: calibrate.py  data_pipeline.py  loss.py  model.py  train.py  utils.py
tests/: conftest.py
tests/integration/: test_diffraction_dataset.py  test_interpolate_weights.py
tests/scripts/: test_entrypoint_argparse.py  test_simulate_data_smoke.py
tests/unit/: test_data_pipeline.py  test_detectors.py  test_loss.py  test_model_wrappers.py  test_utils.py
