[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maxima-vit"
version = "0.1.0"
description = "Vision Transformer-based 6D detector geometry calibration for 2D XRD patterns"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "fabio==2024.9.0",
    "h5py==3.14.0",
    "matplotlib==3.10.6",
    "numpy==2.3.2",
    "pyFAI==2026.2.1",
    "PyYAML==6.0.2",
    "scikit-image>=0.24.0",
    "scikit-learn==1.7.2",
    "scipy>=1.14.0",
    "seaborn==0.13.2",
    "tensorboard>=2.18.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "tqdm==4.67.1",
    "transformers==4.56.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["maxima_vit", "maxima_vit.*", "src", "src.*"]
